Updated OpenApi from latest audio/video changes
